--- a/single.html
+++ b/single.html
@@ -5,7 +5,7 @@
 	Facebook: https://fb.com/fh5co
 	URL: https://freehtml5.co
 -->
-<html lang="fr" class="no-js">
+<html lang="en" class="no-js">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -280,20 +280,16 @@
     </div>
 </div>
 <div id="footer-loader" data-include="footer.html"></div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/vendors/owl.carousel/owl.carousel.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-        integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-        crossorigin="anonymous"></script>
 <!-- Waypoints -->
 <script src="js/vendors/jquery/jquery.waypoints.min.js"></script>
 <!-- Parallax -->
 <script src="js/vendors/jquery/jquery.stellar.min.js"></script>
 <!-- Main -->
 <script src="js/app/main.js"></script>
+<script src="js/app/includes_loader.js"></script>
 <script>if (!navigator.userAgent.match(/Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i)){$(window).stellar();}</script>
 
 </body>
