--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/nathan-mcbride-229637.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/others/nathan-mcbride-229637.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/others/ryan-moreno-98837.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
                             <div class="fh5co_news_img">
-                                <img src="images/photo-1449157291145-7efd050a4d0e-578x362.jpg" alt=""/>
+                                <img src="images/others/photo-1449157291145-7efd050a4d0e-578x362.jpg" alt=""/>
                             </div>
                             <div></div>
                         </div>
@@ -88,7 +88,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/office-768x512.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/others/office-768x512.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/download (1).jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/others/download%20(1).jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/allef-vinicius-108153.jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/others/allef-vinicius-108153.jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/download (2).jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/others/download%20(2).jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
@@ -152,7 +152,7 @@
                     </div>
                 </div>
                 <div class="row pb-3">
-                    <div class="col-5 align-self-center"><img src="images/seth-doyle-133175.jpg" alt="img"
+                    <div class="col-5 align-self-center"><img src="images/others/seth-doyle-133175.jpg" alt="img"
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
@@ -181,7 +181,7 @@
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/others/39-324x235.jpg" alt=""/></div>
                     <div>
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -190,7 +190,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/others/joe-gardner-75333.jpg" alt=""/></div>
                     <div>
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -199,7 +199,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/others/ryan-moreno-98837.jpg" alt=""/></div>
                     <div>
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -208,7 +208,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/others/seth-doyle-133175.jpg" alt=""/></div>
                     <div>
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
