--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="fh5co_suceefh5co_height"><img src="images/it/lignes-de-code-java-1600.jpg" alt="img"/>
                 <div class="fh5co_suceefh5co_height_position_absolute"></div>
                 <div class="fh5co_suceefh5co_height_position_absolute_font">
-                    <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Dec 31,2019
+                    <div class=""><a href="articles/it/pourquoi_apprendre_java/fr/index.html" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Dec 31,2019
                     </a></div>
                     <div class=""><a href="articles/it/pourquoi_apprendre_java/fr/index.html" class="fh5co_good_font"> Pourquoi apprendre le langage Java ?</a></div>
                 </div>
@@ -37,26 +37,26 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/science-578x362.jpg" alt="img"/>
+                    <div class="fh5co_suceefh5co_height_2"><img src="images/it/programming-cplus.jpg" alt="img"/>
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
-                            <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Oct
-                                28,2017 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2"> After all is said and done, <br>more is said than done </a></div>
+                            <div class=""><a href="articles/it/pourquoi_apprendre_c++/fr/index.html" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Dec
+                                31,2019 </a></div>
+                            <div class=""><a href="articles/it/pourquoi_apprendre_c++/fr/index.html" class="fh5co_good_font_2"> Pourquoi apprendre le langage C++ ? </a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/joe-gardner-75333.jpg" alt="img"/>
+                    <div class="fh5co_suceefh5co_height_2"><img src="images/it/Pourquoi-apprendre-à-programmer-en-C-800x445.jpg" alt="img"/>
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
-                            <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Oct 28,2017 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2"> After all is said and done... </a></div>
+                            <div class=""><a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Dec 31,2019 </a></div>
+                            <div class=""><a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="fh5co_good_font_2"> Pourquoi apprendre le langage C </a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/ryan-moreno-98837.jpg" alt="img"/>
+                    <div class="fh5co_suceefh5co_height_2"><img src="images/others/ryan-moreno-98837.jpg" alt="img"/>
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Oct
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/10-1-1-875x500.jpg" alt="img"/>
+                    <div class="fh5co_suceefh5co_height_2"><img src="images/others/10-1-1-875x500.jpg" alt="img"/>
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Oct
@@ -87,8 +87,8 @@
         <div class="owl-carousel owl-theme js" id="slider1">
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/allef-vinicius-108153.jpg" alt=""
-                                                           class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/others/allef-vinicius-108153.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
                         <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
@@ -98,7 +98,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/abigail-keenan-65477.jpg" alt="" class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/others/abigail-keenan-65477.jpg" alt="" class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
                         <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
@@ -108,7 +108,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/ryan-moreno-98837.jpg" alt="" class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/others/ryan-moreno-98837.jpg" alt="" class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
                         <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
@@ -118,7 +118,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/science-578x362.jpg" alt="" class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/others/science-578x362.jpg" alt="" class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
                         <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
@@ -128,7 +128,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/nick-karvounis-78711.jpg" alt="" class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/others/nick-karvounis-78711.jpg" alt="" class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
                         <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
@@ -147,7 +147,7 @@
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/others/39-324x235.jpg" alt=""/></div>
                     <div>
                         <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -156,7 +156,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/others/joe-gardner-75333.jpg" alt=""/></div>
                     <div>
                         <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -165,7 +165,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/others/ryan-moreno-98837.jpg" alt=""/></div>
                     <div>
                         <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -174,7 +174,7 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/others/seth-doyle-133175.jpg" alt=""/></div>
                     <div>
                         <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
@@ -200,7 +200,7 @@
                                         frameborder="0" allowfullscreen></iframe>
                             </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide">
-                                <img src="images/ariel-lustre-208615.jpg" alt=""/>
+                                <img src="images/others/ariel-lustre-208615.jpg" alt=""/>
                             </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide" id="play-video">
                                 <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_1">
@@ -226,7 +226,7 @@
                                         frameborder="0" allowfullscreen></iframe>
                             </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide_2">
-                                <img src="images/39-324x235.jpg" alt=""/></div>
+                                <img src="images/others/39-324x235.jpg" alt=""/></div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_2" id="play-video_2">
                                 <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_1">
                                     <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
@@ -251,7 +251,7 @@
                                         frameborder="0" allowfullscreen></iframe>
                             </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide_3">
-                                <img src="images/joe-gardner-75333.jpg" alt=""/></div>
+                                <img src="images/others/joe-gardner-75333.jpg" alt=""/></div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_3" id="play-video_3">
                                 <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_1">
                                     <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
@@ -276,7 +276,7 @@
                                         frameborder="0" allowfullscreen></iframe>
                             </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide_4">
-                                <img src="images/vil-son-35490.jpg" alt=""/>
+                                <img src="images/others/vil-son-35490.jpg" alt=""/>
                             </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_4" id="play-video_4">
                                 <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_1">
@@ -307,7 +307,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/nathan-mcbride-229637.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/others/nathan-mcbride-229637.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/others/ryan-moreno-98837.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
@@ -347,7 +347,7 @@
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
                             <div class="fh5co_news_img">
-                                <img src="images/photo-1449157291145-7efd050a4d0e-578x362.jpg" alt=""/>
+                                <img src="images/others/photo-1449157291145-7efd050a4d0e-578x362.jpg" alt=""/>
                             </div>
                             <div></div>
                         </div>
@@ -364,7 +364,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/office-768x512.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/others/office-768x512.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
@@ -402,7 +402,7 @@
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/download (1).jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/others/download%20(1).jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
@@ -411,7 +411,7 @@
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/allef-vinicius-108153.jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/others/allef-vinicius-108153.jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
@@ -420,7 +420,7 @@
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/download (2).jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/others/download%20(2).jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
@@ -428,7 +428,7 @@
                     </div>
                 </div>
                 <div class="row pb-3">
-                    <div class="col-5 align-self-center"><img src="images/seth-doyle-133175.jpg" alt="img"
+                    <div class="col-5 align-self-center"><img src="images/others/seth-doyle-133175.jpg" alt="img"
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
