add Section Marketing

--- a/index.html
+++ b/index.html
@@ -143,45 +143,66 @@
         </div>
     </div>
 </div>
+
+
 <div class="container-fluid pb-4 pt-5">
     <div class="container animate-box">
         <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">News</div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">MARKETING</div>
         </div>
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/others/39-324x235.jpg" alt=""/></div>
-                    <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/marketing_general.jpeg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/Marketing/pourquoi_apprendre_digital_marqueting/fr/index.html" class="text-white"> Pourquoi apprendre le Marketing ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/others/joe-gardner-75333.jpg" alt=""/></div>
-                    <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/les-metiers-du-marketing.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/Marketing/pourquoi_apprendre_marketing_general/fr/index.html" class="text-white"> Pourquoi apprendre le marketing general ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/others/ryan-moreno-98837.jpg" alt=""/></div>
-                    <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/marketing_beaute_top.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/Marketing/pourquoi_apprendre_marketing_influence/fr/index.html" class="text-white"> Pourquoi apprendre le marketing d'influence ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/others/seth-doyle-133175.jpg" alt=""/></div>
-                    <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/marketing_appli.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/Marketing/pourquoi_apprendre_marketing_lancer_une_apli/fr/index.html" class="text-white"> Pourquoi apprendre le Marketing pour promouvoir une application ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/marketing_produit.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/Marketing/pourquoi_apprendre_marketing_nouveau_produit_marcher/fr/index.html" class="text-white"> Pourquoi apprendre le Marketing pour promouvoir un produit ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
