--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
         </div>
     </div>
 </div>
-<div class="container-fluid pt-3">
-    <div class="container animate-box" data-animate-effect="fadeIn">
+
+<!-- Langages de programmation -->
+<div class="container-fluid pb-4 pt-5">
+    <div class="container animate-box">
         <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">IT - Langages de programmation </div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">IT- Langages de programmations</div>
         </div>
-        <div class="owl-carousel owl-theme js" id="slider1">
+        <div class="owl-carousel owl-theme js" id="slider3">
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
                     <div class="fh5co_latest_trading_img"><img src="images/it/python.jpg" alt=""
