--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="google-site-verification" content="aHeogL8EzEJ_55Pl2eDN5aqymxxJixT4doqDV8t9F3M" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Pourquoi ? Why ? Tout savoir sur ce qu'il y'a a apprendre- Why" />
@@ -293,7 +293,7 @@
     </div>
 </div>
 
-<div class="container-fluid fh5co_video_news_bg pb-4">
+<!--div class="container-fluid fh5co_video_news_bg pb-4">
     <div class="container animate-box" data-animate-effect="fadeIn">
         <div>
             <div class="fh5co_heading fh5co_heading_border_bottom pt-5 pb-2 mb-4  text-white">Video News</div>
@@ -405,7 +405,7 @@
             </div>
         </div>
     </div>
-</div>
+</div-->
 <div class="container-fluid pb-4 pt-4 paddding">
     <div class="container paddding">
         <div class="row mx-0">
