--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/it/programming-cplus.jpg" alt="img"/>
+                    <div class="fh5co_suceefh5co_height_2"><img src="images/Santé_Nuttrition/fruits.jpg" alt="img"/>
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
-                            <div class=""><a href="articles/it/pourquoi_apprendre_c++/fr/index.html" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Dec
-                                31,2019 </a></div>
-                            <div class=""><a href="articles/it/pourquoi_apprendre_c++/fr/index.html" class="fh5co_good_font_2"> Pourquoi apprendre le langage C++ ? </a></div>
+                            <div class=""><a href="articles/sante_nutrition/pourquoi_manger_les_fruits/fr/index.html" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Avril
+                                13,2020 </a></div>
+                            <div class=""><a href="articles/sante_nutrition/pourquoi_manger_les_fruits/fr/index.html" class="fh5co_good_font_2"> Pourquoi manger des fruits? </a></div>
                         </div>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/Sante%20-%20Nuttrition%20/pourquoi_manger_bio/fr/index.html" class="text-white"> Pourquoi manger Bio ? </a>
+                        <a href="articles/sante_nutrition/pourquoi_manger_bio/fr/index.html" class="text-white"> Pourquoi manger Bio ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
                     </div>
                 </div>
@@ -317,7 +317,7 @@
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/Sante%20-%20Nuttrition%20/pourquoi_manger_equiliber/fr/index.html" class="text-white"> Pourquoi manger equilibre ? </a>
+                        <a href="articles/sante_nutrition/pourquoi_manger_equiliber/fr/index.html" class="text-white"> Pourquoi manger equilibre ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
                     </div>
                 </div>
@@ -328,7 +328,7 @@
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/Sante%20-%20Nuttrition%20/pourquoi_manger_la_viande/fr/index.html" class="text-white"> Pourquoi manger de la viande ? </a>
+                        <a href="articles/sante_nutrition/pourquoi_manger_la_viande/fr/index.html" class="text-white"> Pourquoi manger de la viande ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
                     </div>
                 </div>
@@ -339,7 +339,7 @@
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/Sante%20-%20Nuttrition%20/pourquoi_manger_les_fruits/fr/index.html" class="text-white"> Pourquoi manger des fruits ? </a>
+                        <a href="articles/sante_nutrition/pourquoi_manger_les_fruits/fr/index.html" class="text-white"> Pourquoi manger des fruits ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
                     </div>
                 </div>
@@ -350,7 +350,7 @@
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/Sante%20-%20Nuttrition%20/pourquoi_manger_les_legumes/fr/index.html" class="text-white"> Pourquoi manger des legumes ? </a>
+                        <a href="articles/sante_nutrition/pourquoi_manger_les_legumes/fr/index.html" class="text-white"> Pourquoi manger des legumes ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
                     </div>
                 </div>
@@ -524,6 +524,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="row pb-4">
+                    <div class="col-md-5">
+                        <div class="fh5co_hover_news_img">
+                            <div class="fh5co_news_img"><img src="images/Santé_Nuttrition/manger_bio.jpg" alt=""/></div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="col-md-7 animate-box">
+                        <a href="articles/sante_nutrition/pourquoi_manger_bio/fr/index.html" class="fh5co_magna py-2"> Pourquoi
+                            manger Bio
+                            <br>
+                        </a> <a href="articles/sante_nutrition/pourquoi_manger_bio/fr/index.html"
+                                class="fh5co_mini_time py-3">April 13,2020 </a>
+                        <div class="fh5co_consectetur">
+                            Le cahier des charges bio, en bannissant les pesticides, produits chimiques et autres additifs,
+                            propose des produits incontestablement plus sains. Toutefois, leurs avantages ne s’arrêtent pas là!
+                        </div>
+                    </div>
+                </div>
 
                 <div class="row pb-4">
                     <div class="col-md-5">
@@ -609,7 +628,7 @@
         </div>
     </div>
 </div>
-
+</div>
 <div id="footer-loader" data-include="footer.html"></div>
 
 <script src="js/vendors/jquery/jquery.js"></script>
